deploy/aspnetcore-healthchecks-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: aspnetcore-healthchecks
  namespace: default
  labels:
    tag: aspnetcore-healthchecks
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aspnetcore-healthchecks
    spec:
      containers:
      - name: aspnetcore-healthchecks
        image: "aspnetcore-healthchecks:v1.0"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        args:
        - --spring.profiles.active=dev
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /live
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 2
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          periodSeconds: 3
          successThreshold: 2
          timeoutSeconds: 2
          failureThreshold: 3
        resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 512Mi
      terminationGracePeriodSeconds: 10
      volumes:
      imagePullSecrets:
      - name: netcorepal
      restartPolicy: Always
